--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,19 @@
 [package]
 authors = ["RSS Blue", "Dovydas Joksas"]
 name = "v4v"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "Value-for-value helper utilities for Podcasting 2.0"
 license = "MIT OR Apache-2.0"
 keywords = ["bitcoin", "podcast", "rss", "v4v"]
+repository = "https://github.com/rssblue/v4v"
+readme = "README.md"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
 paste = "1.0.15"
 
 [dependencies]
+
+[lib]
+doctest = false
