--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["RSS Blue", "Dovydas Joksas"]
 name = "v4v"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2021"
 description = "Value-for-value helper utilities for Podcasting 2.0"
 license = "MIT OR Apache-2.0"
@@ -18,4 +18,7 @@ base64 = "0.22.1"
 hmac-sha256 = "1.1.7"
 http02 = { package = "http", version = "0.2.12" }
 http1 = { package = "http", version = "1.1.0" }
+reqwest = "0.12.5"
+serde = {version="1.0.208", features=["derive"]}
+serde_json = "1.0.125"
 time = "0.3.36"
