--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ paste = "1.0.15"
 
 [dependencies]
 base64 = "0.22.1"
+chrono = {version="0.4.38", features=["serde"]}
 hmac-sha256 = "1.1.7"
 http02 = { package = "http", version = "0.2.12" }
 http1 = { package = "http", version = "1.1.0" }
