--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ chrono = {version="0.4.38", features=["serde"]}
 hmac-sha256 = "1.1.7"
 http02 = { package = "http", version = "0.2.12" }
 http1 = { package = "http", version = "1.1.0" }
-reqwest = "0.12.5"
-serde = {version="1.0.208", features=["derive"]}
+reqwest = {version="0.12.5", default-features=false, features=["rustls-tls"] }
+serde = { version="1.0.208", features=["derive"] }
 serde_json = "1.0.125"
 time = "0.3.36"
