--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["RSS Blue", "Dovydas Joksas"]
 name = "v4v"
-version = "0.4.4"
+version = "0.4.5"
 edition = "2021"
 description = "Value-for-value helper utilities for Podcasting 2.0"
 license = "MIT OR Apache-2.0"
@@ -22,4 +22,7 @@ http1 = { package = "http", version = "1.1.0" }
 reqwest = {version="0.12.5", default-features=false, features=["rustls-tls"] }
 serde = { version="1.0.208", features=["derive"] }
 serde_json = "1.0.125"
+strum_macros = "0.26.4"
 time = "0.3.36"
+url = {version="2.5.2", features=["serde"]}
+uuid = {version="1.10.0", features=["serde"]}
