--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["RSS Blue", "Dovydas Joksas"]
 name = "v4v"
-version = "0.5.18"
+version = "0.5.19"
 edition = "2021"
 description = "Value-for-value helper utilities for Podcasting 2.0"
 license = "MIT OR Apache-2.0"
@@ -22,7 +22,7 @@ http1 = { package = "http", version = "1.1.0" }
 reqwest = {version="0.12.7", default-features=false, features=["rustls-tls"] }
 serde = { version="1.0.209", features=["derive"] }
 serde_json = "1.0.127"
-strum_macros = "0.26.4"
+strum = { version = "0.26.3", features = ["derive"] }
 time = "0.3.36"
 url = {version="2.5.2", features=["serde"]}
 uuid = {version="1.10.0", features=["serde"]}
